--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -10,5 +10,4 @@ html {
 
 body {
   font-family: "Public Sans", sans-serif;
-  max-width: 1440px;
 }
