--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -59,7 +59,7 @@ body {
     .hero-image {
       position: absolute;
       width: 50%;
-      top: -22%;
+      top: -75%;
       right: -6.5rem;
     }
     .hero-content {
